@@ -1,9 +1,10 @@
 
 # makefile fragment to define the macros java_default_version,
-# java{,5,6,7,8}_architectures
+# java{,5,6,7,8,9}_architectures
 
-java8_architectures =
-java7_architectures = alpha amd64 arm64 armel armhf arm64 i386 lpia \
+java9_architectures =
+java8_architectures = $(java9_architectures)
+java7_architectures = $(java8_architectures) alpha amd64 arm64 armel armhf arm64 i386 lpia \
 		mips mipsel mips64el \
 		powerpc powerpcspe ppc64 ppc64el \
 		s390x sh4 x32
@@ -14,7 +15,9 @@ java5_architectures = $(java6_architectures) \
 java_architectures = $(java5_architectures)
 
 _java_host_arch := $(if $(DEB_HOST_ARCH),$(DEB_HOST_ARCH),$(shell dpkg-architecture -qDEB_HOST_ARCH))
-ifneq (,$(filter $(_java_host_arch),$(java8_architectures)))
+ifneq (,$(filter $(_java_host_arch),$(java9_architectures)))
+  java_default_version = 9
+else ifneq (,$(filter $(_java_host_arch),$(java8_architectures)))
   java_default_version = 8
 else ifneq (,$(filter $(_java_host_arch),$(java6_architectures)))
   java_default_version = 7
